force-app/main/default/objects/Account/fields/Average_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Invoice_Amount__c</fullName>
    <description>Average invoice amount for this account</description>
    <label>Average Invoice Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>