force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description
  >Customer health score based on subscription status and payment history</description>
    <label>Health Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>