force-app/main/default/objects/Account/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <description>Total number of invoices for this account</description>
    <label>Invoice Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>