force-app/main/default/objects/Account/fields/Last_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Date__c</fullName>
    <description>Date of the most recent invoice</description>
    <label>Last Invoice Date</label>
    <type>Date</type>
</CustomField>