force-app/main/default/objects/Account/fields/Last_Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Subscription_Date__c</fullName>
    <description>Date of the most recent subscription</description>
    <label>Last Subscription Date</label>
    <type>Date</type>
</CustomField>