force-app/main/default/objects/Account/fields/Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Status__c</fullName>
    <description>Current subscription status for the account</description>
    <label>Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Trial Customer</fullName>
            </value>
            <value>
                <fullName>Active Customer</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Former Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>