force-app/main/default/objects/Account/fields/Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed__c</fullName>
    <description>Total amount billed to this account</description>
    <label>Total Billed</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>